<resources>
    <string name="app_name">AAC-CWNU-IT-2015-1</string>
    <string name="action_settings">Settings</string>

    <string name="groupName">그룹 이름</string>
    <string name="groupContext">그룹 내용</string>

    <string name="hello_world">Hello world!</string>

    <string name="fold">Fold</string>

    <string name="test">Test</string>

    <!-- 메인 액티비티 관련 -->
    <string name="menu_main_return_to_default">Return to default</string>
    <string name="menu_main_add_item">Add Item</string>
    <string name="menu_select_item_to_modify">Modify Item</string>

    <!-- 아이템 추가 관련 -->
    <string name="title_activity_add_item">Add Item</string>
    <string name="button_add_word_macro">Add Word/Macro</string>
    <string name="button_add_group">Add Group</string>
    <string name="button_cancel_add_item">Cancel</string>
    <string name="label_add_item">Item to be added :</string>

    <!-- 아이템 수정 관련 -->
    <string name="title_activity_select_item_to_rename">Select an item to rename</string>
    <string name="button_main_item_rename_cancel">Cancel</string>
    <string name="label_rename_item">Item</string>
    <string name="title_dialog_item_rename">Item Renaming</string>
    <string name="button_dialog_item_rename_positive">Apply</string>
    <string name="button_dialog_item_rename_negative">Cancel</string>
    <string name="toast_dialog_item_rename_success">Item changed</string>
    <string name="toast_dialog_item_rename_failure">Failed to change item</string>

    <!-- 아이템 선택 메뉴 관련 -->
    <string name="menu_item_select">Select Item</string>
    <string name="title_item_select">Selection mode</string>
    <string name="menu_item_select_cancel">Cancel</string>
    <string name="menu_item_select_remove">Remove</string>
    <string name="menu_item_select_move">Move</string>
    <string name="menu_item_select_select_all">Select All</string>
    <string name="menu_item_select_deselect_all">Deselect All</string>
    <string name="menu_item_select_set_image">Set Image</string>

    <!-- 의존성 경고창 관련 -->
    <string name="menu_remove_item_dependency_warning_title">Dependency Warning</string>
    <string name="menu_remove_item_dependency_warning_context">Macro with dependencies exists. It will be deleted too when you process this operation. Are you sure?</string>
    <string name="menu_remove_item_dependency_warning_confirm">Confirm</string>
    <string name="menu_remove_item_dependency_warning_cancel">Cancel</string>

    <!-- 검색 관련 -->
    <string name="title_activity_search">Search Items</string>
    <string name="menu_search">Search</string>
    <string name="label_search">Query</string>

    <!-- 그림 선택 관련 -->
    <string name="title_activity_image_selection">Image Selection</string>
    <string name="title_image_selection">Select Image</string>
    <string name="text_image_selection_preset">Use Preset Images</string>
    <string name="text_image_selection_user">Use User Images from Gallery</string>
    <string name="button_image_selection">Next</string>

    <!-- 프리셋 그림 선택 관련 -->
    <string name="title_activity_preset_image_selection">Select Preset Image</string>
    <string name="button_preset_image_selection">Next</string>

    <!-- 아이템 이동 관련 -->
    <string name="title_activity_item_move">Select Group</string>
    <string name="button_item_move_cancel">Cancel</string>

</resources>
